--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Angular2 Modal / Dialogue using bootstrap",
   "main": "index.js",
   "scripts": {
-    "tsc": "tsc -p src -w",
-    "start": "live-server --open=src"
+    "tsc": "tsc",
+    "tsc:w": "tsc -w",
+    "lite": "lite-server",
+    "go": "concurrent \"npm run tsc:w\" \"npm run lite\" "
   },
   "repository": {
     "type": "git",
@@ -25,13 +27,19 @@
   },
   "homepage": "https://github.com/sivaah/angular2-bootstrap-model#readme",
   "dependencies": {
-    "angular2": "2.0.0-alpha.44",
+    "angular2": "2.0.0-alpha.53",
+    "systemjs": "0.19.6",
+    "es6-promise": "^3.0.2",
+    "es6-shim": "^0.33.3",
+    "reflect-metadata": "0.1.2",
+    "rxjs": "5.0.0-alpha.14",
+    "zone.js": "0.5.8",
     "bootstrap": "^3.3.6",
-    "jquery": "^2.1.4",
-    "systemjs": "0.19.2"
+    "jquery": "^2.1.4"
   },
   "devDependencies": {
-    "live-server": "^0.9.0",
+    "concurrently": "^1.0.0",
+    "lite-server": "^1.3.1",
     "typescript": "^1.7.3"
   }
 }
